{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 20,
  "lineage": "b9d990f5-e143-b49c-6e67-45d6082ec56e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "clnt_nsb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-0bd58d7ceaa68dc42",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd58d7ceaa68dc42",
            "instance_state": "running",
            "instance_type": "m5a.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "dse-sshkey-mc-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f8db19585efab5c",
            "private_dns": "ip-172-31-83-117.ec2.internal",
            "private_ip": "172.31.83.117",
            "public_dns": "ec2-3-236-58-22.compute-1.amazonaws.com",
            "public_ip": "3.236.58.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-031c33299df824a86",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_dse_node",
              "sg_mc_demo_group",
              "sg_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8336858f",
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-nosqlbench_0"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "vpc_security_group_ids": [
              "sg-05409b883a7b857e1",
              "sg-07390e2341029f616",
              "sg-0c093e027c9ec16d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.dse_terra_ssh",
            "aws_security_group.sg_dse_node",
            "aws_security_group.sg_mc_demo_group",
            "aws_security_group.sg_ssh",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "clnt_opsc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-08fd13fd166da4e1e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08fd13fd166da4e1e",
            "instance_state": "running",
            "instance_type": "m5a.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "dse-sshkey-mc-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9017200947d891d",
            "private_dns": "ip-172-31-95-135.ec2.internal",
            "private_ip": "172.31.95.135",
            "public_dns": "ec2-18-207-249-81.compute-1.amazonaws.com",
            "public_ip": "18.207.249.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f42890bba13386e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_dse_node",
              "sg_mc_demo_group",
              "sg_opsc_node",
              "sg_opsc_web",
              "sg_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8336858f",
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-opsc_srv_0"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "vpc_security_group_ids": [
              "sg-00412d15723d7621a",
              "sg-05409b883a7b857e1",
              "sg-07390e2341029f616",
              "sg-09e66d31c871264d2",
              "sg-0c093e027c9ec16d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.dse_terra_ssh",
            "aws_security_group.sg_dse_node",
            "aws_security_group.sg_mc_demo_group",
            "aws_security_group.sg_opsc_node",
            "aws_security_group.sg_opsc_web",
            "aws_security_group.sg_ssh",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dse_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-070ecd2b10f657f00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070ecd2b10f657f00",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "dse-sshkey-mc-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d485803c72a2456d",
            "private_dns": "ip-172-31-94-152.ec2.internal",
            "private_ip": "172.31.94.152",
            "public_dns": "ec2-18-205-104-52.compute-1.amazonaws.com",
            "public_ip": "18.205.104.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00bdf0ccaf94d72df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_dse_node",
              "sg_mc_demo_group",
              "sg_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8336858f",
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-dse_core_0"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "vpc_security_group_ids": [
              "sg-05409b883a7b857e1",
              "sg-07390e2341029f616",
              "sg-0c093e027c9ec16d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.dse_terra_ssh",
            "aws_security_group.sg_dse_node",
            "aws_security_group.sg_mc_demo_group",
            "aws_security_group.sg_ssh",
            "data.template_file.user_data"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-0ff710eab68599370",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff710eab68599370",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "dse-sshkey-mc-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf7576c4b918b19a",
            "private_dns": "ip-172-31-88-121.ec2.internal",
            "private_ip": "172.31.88.121",
            "public_dns": "ec2-3-236-207-143.compute-1.amazonaws.com",
            "public_ip": "3.236.207.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c6447c761d20f961",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_dse_node",
              "sg_mc_demo_group",
              "sg_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8336858f",
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-dse_core_1"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "vpc_security_group_ids": [
              "sg-05409b883a7b857e1",
              "sg-07390e2341029f616",
              "sg-0c093e027c9ec16d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.dse_terra_ssh",
            "aws_security_group.sg_dse_node",
            "aws_security_group.sg_mc_demo_group",
            "aws_security_group.sg_ssh",
            "data.template_file.user_data"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-093db1b30b0886d41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093db1b30b0886d41",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "dse-sshkey-mc-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03646a1d66f9922ae",
            "private_dns": "ip-172-31-95-38.ec2.internal",
            "private_ip": "172.31.95.38",
            "public_dns": "ec2-3-94-95-202.compute-1.amazonaws.com",
            "public_ip": "3.94.95.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09d4cab1fe8e1431e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_dse_node",
              "sg_mc_demo_group",
              "sg_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8336858f",
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-dse_core_2",
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "vpc_security_group_ids": [
              "sg-05409b883a7b857e1",
              "sg-07390e2341029f616",
              "sg-0c093e027c9ec16d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.dse_terra_ssh",
            "aws_security_group.sg_dse_node",
            "aws_security_group.sg_mc_demo_group",
            "aws_security_group.sg_ssh",
            "data.template_file.user_data"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-07efbd274a8bbac1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07efbd274a8bbac1f",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "dse-sshkey-mc-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c38f0e1a3aee0e6",
            "private_dns": "ip-172-31-95-183.ec2.internal",
            "private_ip": "172.31.95.183",
            "public_dns": "ec2-3-236-45-43.compute-1.amazonaws.com",
            "public_ip": "3.236.45.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04d9dd5ea9eff38a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_dse_node",
              "sg_mc_demo_group",
              "sg_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8336858f",
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-dse_core_3",
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "vpc_security_group_ids": [
              "sg-05409b883a7b857e1",
              "sg-07390e2341029f616",
              "sg-0c093e027c9ec16d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.dse_terra_ssh",
            "aws_security_group.sg_dse_node",
            "aws_security_group.sg_mc_demo_group",
            "aws_security_group.sg_ssh",
            "data.template_file.user_data"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-0ceef289901705987",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ceef289901705987",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "dse-sshkey-mc-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd1e7dca6b5ac7ef",
            "private_dns": "ip-172-31-82-86.ec2.internal",
            "private_ip": "172.31.82.86",
            "public_dns": "ec2-3-237-33-156.compute-1.amazonaws.com",
            "public_ip": "3.237.33.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01d3366b7431f6a5d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_dse_node",
              "sg_mc_demo_group",
              "sg_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8336858f",
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-dse_core_4",
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "vpc_security_group_ids": [
              "sg-05409b883a7b857e1",
              "sg-07390e2341029f616",
              "sg-0c093e027c9ec16d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.dse_terra_ssh",
            "aws_security_group.sg_dse_node",
            "aws_security_group.sg_mc_demo_group",
            "aws_security_group.sg_ssh",
            "data.template_file.user_data"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-05ab959f3e3023c7c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ab959f3e3023c7c",
            "instance_state": "running",
            "instance_type": "i3.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "dse-sshkey-mc-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f328130049a3d56e",
            "private_dns": "ip-172-31-91-33.ec2.internal",
            "private_ip": "172.31.91.33",
            "public_dns": "ec2-3-236-247-226.compute-1.amazonaws.com",
            "public_ip": "3.236.247.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05402b4555eb05f4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_dse_node",
              "sg_mc_demo_group",
              "sg_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8336858f",
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-dse_core_5",
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "yabin.meng@datastax.com",
              "PrincipalId": "AIDAVGQJT4RYIX4EB74R5"
            },
            "vpc_security_group_ids": [
              "sg-05409b883a7b857e1",
              "sg-07390e2341029f616",
              "sg-0c093e027c9ec16d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.dse_terra_ssh",
            "aws_security_group.sg_dse_node",
            "aws_security_group.sg_mc_demo_group",
            "aws_security_group.sg_ssh",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_dse_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:security-group/sg-07390e2341029f616",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07390e2341029f616",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 61621,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 61621
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 7000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 7001
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 7077,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 7077
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 7199,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 7199
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8609,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 8609
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 9042
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9142,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 9142
              }
            ],
            "name": "sg_dse_node",
            "name_prefix": "",
            "owner_id": "357576205424",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-sg_dse_node"
            },
            "timeouts": null,
            "vpc_id": "vpc-36fa8452"
          },
          "dependencies": [
            "aws_security_group.sg_mc_demo_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_mc_demo_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:security-group/sg-05409b883a7b857e1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05409b883a7b857e1",
            "ingress": [],
            "name": "sg_mc_demo_group",
            "name_prefix": "",
            "owner_id": "357576205424",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-sg_mc_demo_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-36fa8452"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_opsc_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:security-group/sg-09e66d31c871264d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e66d31c871264d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 61619,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05409b883a7b857e1"
                ],
                "self": false,
                "to_port": 61620
              }
            ],
            "name": "sg_opsc_node",
            "name_prefix": "",
            "owner_id": "357576205424",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-sg_opsc_node"
            },
            "timeouts": null,
            "vpc_id": "vpc-36fa8452"
          },
          "dependencies": [
            "aws_security_group.sg_mc_demo_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_opsc_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:security-group/sg-00412d15723d7621a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00412d15723d7621a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "sg_opsc_web",
            "name_prefix": "",
            "owner_id": "357576205424",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-sg_opsc_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-36fa8452"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:security-group/sg-0c093e027c9ec16d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c093e027c9ec16d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_ssh",
            "name_prefix": "",
            "owner_id": "357576205424",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "mc-demo",
              "Name": "mc_demo-sg_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-36fa8452"
          }
        }
      ]
    }
  ]
}